[gd_scene load_steps=27 format=3 uid="uid://bli5ijcxx5bse"]

[ext_resource type="Script" path="res://scripts/memory_system.gd" id="1_omjui"]
[ext_resource type="Texture2D" uid="uid://dnyy3dpv5wttx" path="res://images/baseMemorySytem/MemoryBar.png" id="2_0tlbn"]
[ext_resource type="Texture2D" uid="uid://w2wgt0bahe5j" path="res://images/baseMemorySytem/Memory1.png" id="3_gh8ea"]
[ext_resource type="Texture2D" uid="uid://p0qgcoomdx1h" path="res://images/baseMemorySytem/Selected/Memory1_Selected.png" id="4_2hgra"]
[ext_resource type="Texture2D" uid="uid://2r5e7j4yc1w0" path="res://images/baseMemorySytem/Memory2.png" id="4_if5op"]
[ext_resource type="Texture2D" uid="uid://mipp4e0fpcuk" path="res://images/baseMemorySytem/Memory3.png" id="5_jn682"]
[ext_resource type="Texture2D" uid="uid://op3w0pa4qalg" path="res://images/baseMemorySytem/Selected/Memory2_Selected.png" id="6_tbopm"]
[ext_resource type="Texture2D" uid="uid://grkvnmyt7ntc" path="res://images/baseMemorySytem/Selected/Memory3_Selected.png" id="8_7mygo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbdq5"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwkqk"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wlel"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10

[sub_resource type="Animation" id="Animation_485vo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Memorias/PositionMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Memorias/PositionMarker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_l4hql"]
resource_name = "idle"
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Memorias/PositionMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Memorias/PositionMarker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1tktg"]
resource_name = "to_center"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Memorias/PositionMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(13, 90), Vector2(448, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Memorias/PositionMarker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_y7daq"]
resource_name = "to_side"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Memorias/PositionMarker:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(448, 90), Vector2(13, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Memorias/PositionMarker:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4b3ci"]
_data = {
"RESET": SubResource("Animation_485vo"),
"idle": SubResource("Animation_l4hql"),
"to_center": SubResource("Animation_1tktg"),
"to_side": SubResource("Animation_y7daq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ovgi"]
animation = &"to_center"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_p32nl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3ovgi")
blend_point_0/pos = 1.0
min_space = -1.1
max_space = 1.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_53rb6"]
animation = &"to_side"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_l4xhh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_53rb6")
blend_point_0/pos = 1.0
min_space = -1.1
max_space = 1.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v8q8k"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dkcad"]
switch_mode = 1
advance_mode = 2
advance_condition = &"to_side"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8i8bg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vr2sv"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4pjlp"]
switch_mode = 1
advance_mode = 2
advance_condition = &"to_center"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3bfmh"]
states/End/position = Vector2(689, 100)
states/Start/position = Vector2(145, 123)
states/To_Center/node = SubResource("AnimationNodeBlendSpace1D_p32nl")
states/To_Center/position = Vector2(421, 194)
states/To_Side/node = SubResource("AnimationNodeBlendSpace1D_l4xhh")
states/To_Side/position = Vector2(443, 70)
states/idle/node = SubResource("AnimationNodeAnimation_v8q8k")
states/idle/position = Vector2(284, 123)
transitions = ["To_Center", "To_Side", SubResource("AnimationNodeStateMachineTransition_dkcad"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_8i8bg"), "To_Side", "idle", SubResource("AnimationNodeStateMachineTransition_vr2sv"), "idle", "To_Center", SubResource("AnimationNodeStateMachineTransition_4pjlp")]

[node name="MemorySystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omjui")

[node name="Memorias" type="Control" parent="."]
anchors_preset = 0
offset_left = 35.0
offset_top = -48.0
offset_right = 75.0
offset_bottom = -8.0

[node name="PositionMarker" type="Marker2D" parent="Memorias"]
position = Vector2(13, 90)

[node name="MemoryBar" type="Sprite2D" parent="Memorias/PositionMarker"]
position = Vector2(35, 178)
scale = Vector2(0.467604, 0.59995)
texture = ExtResource("2_0tlbn")

[node name="Memoria 1" type="Button" parent="Memorias/PositionMarker"]
offset_left = -20.0
offset_top = 37.0
offset_right = 198.0
offset_bottom = 143.0
scale = Vector2(0.482651, 0.533583)
theme_override_styles/pressed = SubResource("StyleBoxFlat_nbdq5")
icon = ExtResource("3_gh8ea")

[node name="M1_Selected" type="TextureRect" parent="Memorias/PositionMarker/Memoria 1"]
layout_mode = 0
offset_left = 4.14378
offset_top = 3.74825
offset_right = 214.144
offset_bottom = 101.748
texture = ExtResource("4_2hgra")

[node name="Memoria 2" type="Button" parent="Memorias/PositionMarker"]
offset_left = -20.0
offset_top = 148.0
offset_right = 200.0
offset_bottom = 252.0
scale = Vector2(0.478676, 0.538684)
theme_override_styles/pressed = SubResource("StyleBoxFlat_cwkqk")
icon = ExtResource("4_if5op")

[node name="M2_Selected" type="TextureRect" parent="Memorias/PositionMarker/Memoria 2"]
visible = false
layout_mode = 0
offset_left = 4.17819
offset_top = 3.71275
offset_right = 216.178
offset_bottom = 99.7128
texture = ExtResource("6_tbopm")

[node name="Memoria 3" type="Button" parent="Memorias/PositionMarker"]
offset_left = -18.0
offset_top = 265.0
offset_right = 267.0
offset_bottom = 401.0
scale = Vector2(0.366304, 0.395396)
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wlel")
icon = ExtResource("5_jn682")

[node name="M3_Selected" type="TextureRect" parent="Memorias/PositionMarker/Memoria 3"]
visible = false
layout_mode = 0
offset_left = 8.18992
offset_top = 2.52911
offset_right = 285.19
offset_bottom = 130.529
texture = ExtResource("8_7mygo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4b3ci")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_3bfmh")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/to_center = false
parameters/conditions/to_side = false
parameters/To_Center/blend_position = -1.09764
parameters/To_Side/blend_position = -1.09055

[connection signal="pressed" from="Memorias/PositionMarker/Memoria 1" to="." method="_on_memoria_1_pressed"]
[connection signal="pressed" from="Memorias/PositionMarker/Memoria 2" to="." method="_on_memoria_2_pressed"]
[connection signal="pressed" from="Memorias/PositionMarker/Memoria 3" to="." method="_on_memoria_3_pressed"]
